--- a/package.json
+++ b/package.json
@@ -16,28 +16,33 @@
     "build": "run-s build:*",
     "build:utils": "cd packages/utils && npm run build",
     "build:core": "cd packages/core && npm run build",
+    "build:cli": "cd packages/cli && npm run build",
     "build:plugin-css": "cd packages/plugin-css && npm run build",
     "build:plugin-json": "cd packages/plugin-json && npm run build",
     "build:plugin-sass": "cd packages/plugin-sass && npm run build",
     "build:plugin-ts": "cd packages/plugin-ts && npm run build",
     "cf:build": "cd www && npm install && npm run build",
+    "changeset": "changeset",
     "dev": "run-p dev:*",
+    "dev:utils": "cd packages/utils && npm run dev",
     "dev:core": "cd packages/core && npm run dev",
+    "dev:cli": "cd packages/cli && npm run dev",
     "dev:plugin-css": "cd packages/plugin-css && npm run dev",
     "dev:plugin-json": "cd packages/plugin-json && npm run dev",
     "dev:plugin-sass": "cd packages/plugin-sass && npm run dev",
     "dev:plugin-ts": "cd packages/plugin-ts && npm run dev",
-    "dev:utils": "cd packages/utils && npm run dev",
-    "lint": "eslint \"packages/**/*.{js,ts}\""
+    "lint": "eslint \"packages/**/*.{js,ts}\"",
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.3.0",
+    "@changesets/cli": "^2.18.1",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.4.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.2"
   }
 }
