--- a/www/package.json
+++ b/www/package.json
@@ -9,17 +9,22 @@
     "build": "run-s *:build",
     "cobalt:build": "cobalt build",
     "cobalt:dev": "cobalt build -w",
+    "predev": "npm run cobalt:build",
+    "sync": "cobalt sync",
     "dev": "run-p *:dev"
   },
   "dependencies": {
     "@astrojs/renderer-vue": "^0.2.0",
-    "js-yaml": "^4.1.0",
     "prismjs": "^1.25.0",
     "vue": "^3.2.23"
   },
   "devDependencies": {
     "@cobalt-ui/cli": "^0.0.0",
-    "astro": "^0.21.6",
+    "@cobalt-ui/plugin-json": "workspace:^0.0.0",
+    "@cobalt-ui/plugin-sass": "workspace:^0.0.0",
+    "@cobalt-ui/plugin-ts": "workspace:^0.0.0",
+    "astro": "^0.21.10",
+    "morphdom": "^2.6.1",
     "node-fetch": "^3.1.0",
     "npm-run-all": "^4.1.5"
   }
