--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "homepage": "https://cobalt-ui.pages.dev",
   "scripts": {
-    "build": "npm run build:utils && run-p build:*",
+    "build": "run-s build:*",
+    "build:utils": "cd packages/utils && npm run build",
     "build:core": "cd packages/core && npm run build",
     "build:cli": "cd packages/cli && npm run build",
     "build:plugin-css": "cd packages/plugin-css && npm run build",
@@ -23,6 +24,7 @@
     "cf:build": "cd www && npm install && npm run build",
     "changeset": "changeset",
     "dev": "run-p dev:*",
+    "dev:utils": "cd packages/utils && npm run dev",
     "dev:core": "cd packages/core && npm run dev",
     "dev:cli": "cd packages/cli && npm run dev",
     "dev:plugin-css": "cd packages/plugin-css && npm run dev",
@@ -36,10 +38,10 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.18.1",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "chai": "^4.3.4",
-    "eslint": "^8.4.0",
+    "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.1.3",
