--- a/www/package.json
+++ b/www/package.json
@@ -15,15 +15,17 @@
   },
   "dependencies": {
     "@astrojs/renderer-vue": "^0.2.0",
+    "js-yaml": "^4.1.0",
     "prismjs": "^1.25.0",
     "vue": "^3.2.23"
   },
   "devDependencies": {
     "@cobalt-ui/cli": "^0.0.1",
+    "@cobalt-ui/core": "^0.0.1",
     "@cobalt-ui/plugin-json": "^0.0.0",
     "@cobalt-ui/plugin-sass": "^0.0.0",
     "@cobalt-ui/plugin-ts": "^0.0.0",
-    "astro": "^0.21.10",
+    "astro": "^0.21.11",
     "morphdom": "^2.6.1",
     "node-fetch": "^3.1.0",
     "npm-run-all": "^4.1.5"
