--- a/package.json
+++ b/package.json
@@ -13,14 +13,8 @@
   },
   "homepage": "https://cobalt-ui.pages.dev",
   "scripts": {
-    "build": "run-s build:*",
-    "build:utils": "cd packages/utils && npm run build",
-    "build:core": "cd packages/core && npm run build",
-    "build:cli": "cd packages/cli && npm run build",
-    "build:plugin-css": "cd packages/plugin-css && npm run build",
-    "build:plugin-json": "cd packages/plugin-json && npm run build",
-    "build:plugin-sass": "cd packages/plugin-sass && npm run build",
-    "build:plugin-ts": "cd packages/plugin-ts && npm run build",
+    "prebuild": "del-cli \"**/dist\"",
+    "build": "tsc -b packages/utils packages/core packages/cli packages/plugin-css packages/plugin-json packages/plugin-sass packages/plugin-ts",
     "cf:build": "cd www && npm install && npm run build",
     "changeset": "changeset",
     "dev": "run-p dev:*",
@@ -41,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "chai": "^4.3.4",
+    "del-cli": "^4.0.1",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
