--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -11,7 +11,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc --build --clean",
+    "build": "rm -rf dist && tsc",
     "dev": "tsc -w"
   }
 }
