--- a/examples/apple/tokens.yaml
+++ b/examples/apple/tokens.yaml
@@ -1,190 +1,326 @@
 name: Apple Human Interface Guidelines
 tokens:
   color:
-    type: group
-    modes: ['light', 'dark', 'light_ax', 'dark_ax']
-    tokens:
-      systemBlue:
-        name: Blue
-        value: ['#007aff', '#007aff', '#0a84ff', '#0040dd', '#409cff']
-      systemBrown:
-        name: Brown
-        value: ['#a2845e', '#a2845e', '#ac8e68', '#7f6545', '#b59469']
-      systemCyan:
-        name: Cyan
-        value: ['#32ade6', '#32ade6', '#64d2ff', '#0071a4', '#70d7ff']
-      systemGray:
-        name: Gray
-        value: ['#8e8e93', '#8e8e93', '#8e8e93', '#6c6c70', '#aeaeb2']
-      systemGray2:
-        name: Gray (2)
-        value: ['#aeaeb2', '#aeaeb2', '#636366', '#8e8e93', '#7c7c80']
-      systemGray3:
-        name: Gray (3)
-        value: ['#c7c7cc', '#c7c7cc', '#48484a', '#aeaeb2', '#545456']
-      systemGray4:
-        name: Gray (4)
-        value: ['#d1d1d6', '#d1d1d6', '#3a3a3c', '#bcbcc0', '#444446']
-      systemGray5:
-        name: Gray (5)
-        value: ['#e5e5ea', '#e5e5ea', '#2c2c2e', '#d8d8dc', '#363638']
-      systemGray6:
-        name: Gray (6)
-        value: ['#f2f2f7', '#f2f2f7', '#1c1c1e', '#ebebf0', '#242426']
-      systemGreen:
-        name: Green
-        value: ['#34c759', '#34c759', '#30d158', '#248a3d', '#30db5b']
-      systemIndigo:
-        name: Indigo
-        value: ['#5856d6', '#5856d6', '#5e5ce6', '#3634a3', '#7d7aff']
-      systemMint:
-        name: Mint
-        value: ['#00c7be', '#00c7be', '#66d4cf', '#0c817b', '#66d4cf']
-      systemOrange:
-        name: Orange
-        value: ['#ff9500', '#ff9500', '#ff9f0a', '#c93400', '#ffb340']
-      systemPurple:
-        name: Purple
-        value: ['#af52de', '#af52de', '#bf5af2', '#8944ab', '#da8fff']
-      systemPink:
-        name: Pink
-        value: ['#ff2d55', '#ff2d55', '#ff375f', '#d30f45', '#ff6482']
-      systemRed:
-        name: Red
-        value: ['#ff3b30', '#ff3b30', '#ff453a', '#d70015', '#ff6961']
-      systemTeal:
-        name: Teal
-        value: ['#30b0c7', '#30b0c7', '#40c8e0', '#008299', '#5de6ff']
-      systemYellow:
-        name: Yellow
-        value: ['#ffcc00', '#ffcc00', '#ffd60a', '#b25000', '#ffd426']
-  type:
-    type: group
-    tokens:
-      family:
-        type: group
-        tokens:
-          sf_pro:
-            name: SF Pro
-            value: SF Pro
-          sf_pro_rounded:
-            name: SF Pro Rounded
-            value: SF Pro Rounded
-          sf_compact:
-            name: SF Compact
-            value: SF Compact
-          sf_mono:
-            name: SF Mono
-            value: SF Mono
-          new_york:
-            name: New York
-            value: New York
-      style:
-        type: group
-        modes: ['xSmall', 'Small', 'Medium', 'Large', 'xLarge', 'xxLarge', 'xxxLarge']
-        tokens:
-          large_title:
-            name: Large Title
-            type: group
-            tokens:
-              leading:
-                value: [41, 38, 39, 40, 41, 43, 46, 48]
-              size:
-                value: [34, 31, 32, 33, 34, 36, 38, 40]
-              weight:
-                value: Regular
-          title_1:
-            name: Title 1
-            type: group
-            tokens:
-              leading:
-                value: [34, 31, 32, 33, 34, 37, 39, 41]
-              size:
-                value: [28, 25, 26, 27, 28, 30, 32, 32]
-              weight:
-                value: Regular
-          title_2:
-            name: Title 2
-            type: group
-            tokens:
-              leading:
-                value: [28, 24, 25, 26, 28, 30, 32, 34]
-              size:
-                value: [22, 19, 20, 21, 22, 24, 26, 28]
-              weight:
-                value: Regular
-          title_3:
-            name: Title 3
-            type: group
-            tokens:
-              leading:
-                value: [25, 22, 23, 24, 25, 28, 30, 32]
-              size:
-                value: [20, 17, 18, 19, 20, 22, 24, 26]
-              weight:
-                value: Regular
-          headline:
-            name: Headline
-            type: group
-            tokens:
-              leading:
-                value: [22, 19, 20, 21, 22, 24, 26, 29]
-              size:
-                value: [17, 14, 15, 16, 17, 19, 21, 23]
-              weight:
-                value: Semi-Bold
-          body:
-            name: Body
-            type: group
-            tokens:
-              leading:
-                value: [22, 19, 20, 21, 22, 24, 26, 29]
-              size:
-                value: [17, 14, 15, 16, 17, 19, 21, 23]
-              weight:
-                value: Regular
-          callout:
-            name: Callout
-            type: group
-            tokens:
-              leading:
-                value: [21, 18, 19, 20, 21, 23, 25, 28]
-              size:
-                value: [16, 13, 14, 15, 16, 18, 20, 22]
-              weight: Regular
-          subhead:
-            name: Subhead
-            type: group
-            tokens:
-              leading:
-                value: [20, 16, 18, 19, 20, 22, 24, 28]
-              size:
-                value: [15, 12, 13, 14, 15, 17, 19, 21]
-              weight: Regular
-          footnote:
-            name: Footnote
-            type: group
-            tokens:
-              leading:
-                value: [18, 16, 16, 16, 18, 20, 22, 24]
-              size:
-                value: [13, 12, 12, 12, 13, 15, 17, 19]
-              weight: Regular
-          caption_1:
-            name: Caption 1
-            type: group
-            tokens:
-              leading:
-                value: [16, 13, 13, 13, 16, 19, 21, 18]
-              size:
-                value: [12, 11, 11, 11, 12, 14, 16, 23]
-              weight: Regular
-          caption_2:
-            name: Caption 2
-            type: group
-            tokens:
-              leading:
-                value: [13, 13, 13, 13, 13, 18, 20, 22]
-              size:
-                value: [11, 11, 11, 11, 11, 13, 15, 17]
-              weight: Regular
+    modes:
+      - light
+      - dark
+      - light_ax
+      - dark_ax
+    systemBlue:
+      type: color
+      name: Blue
+      value: "#007aff"
+      mode:
+        light: "#007aff"
+        dark: "#0a84ff"
+        light_ax: "#0040dd"
+        dark_ax: "#409cff"
+    systemBrown:
+      type: color
+      name: Brown
+      value: "#a2845e"
+      mode:
+        light: "#a2845e"
+        dark: "#ac8e68"
+        light_ax: "#7f6545"
+        dark_ax: "#b59469"
+    systemCyan:
+      type: color
+      name: Cyan
+      value: "#32ade6"
+      mode:
+        light: "#32ade6"
+        dark: "#64d2ff"
+        light_ax: "#0071a4"
+        dark_ax: "#70d7ff"
+    systemGray:
+      type: color
+      name: Gray
+      value: "#8e8e93"
+      mode:
+        light: "#8e8e93"
+        dark: "#8e8e93"
+        light_ax: "#6c6c70"
+        dark_ax: "#aeaeb2"
+    systemGray2:
+      type: color
+      name: Gray (2)
+      value: "#aeaeb2"
+      mode:
+        light: "#aeaeb2"
+        dark: "#636366"
+        light_ax: "#8e8e93"
+        dark_ax: "#7c7c80"
+    systemGray3:
+      type: color
+      name: Gray (3)
+      value: "#c7c7cc"
+      mode:
+        light: "#c7c7cc"
+        dark: "#48484a"
+        light_ax: "#aeaeb2"
+        dark_ax: "#545456"
+    systemGray4:
+      type: color
+      name: Gray (4)
+      value: "#d1d1d6"
+      mode:
+        light: "#d1d1d6"
+        dark: "#3a3a3c"
+        light_ax: "#bcbcc0"
+        dark_ax: "#444446"
+    systemGray5:
+      type: color
+      name: Gray (5)
+      value: "#e5e5ea"
+      mode:
+        light: "#e5e5ea"
+        dark: "#2c2c2e"
+        light_ax: "#d8d8dc"
+        dark_ax: "#363638"
+    systemGray6:
+      type: color
+      name: Gray (6)
+      value: "#f2f2f7"
+      mode:
+        light: "#f2f2f7"
+        dark: "#1c1c1e"
+        light_ax: "#ebebf0"
+        dark_ax: "#242426"
+    systemGreen:
+      type: color
+      name: Green
+      value: "#34c759"
+      mode:
+        light: "#34c759"
+        dark: "#30d158"
+        light_ax: "#248a3d"
+        dark_ax: "#30db5b"
+    systemIndigo:
+      type: color
+      name: Indigo
+      value: "#5856d6"
+      mode:
+        light: "#5856d6"
+        dark: "#5e5ce6"
+        light_ax: "#3634a3"
+        dark_ax: "#7d7aff"
+    systemMint:
+      type: color
+      name: Mint
+      value: "#00c7be"
+      mode:
+        light: "#00c7be"
+        dark: "#66d4cf"
+        light_ax: "#0c817b"
+        dark_ax: "#66d4cf"
+    systemOrange:
+      type: color
+      name: Orange
+      value: "#ff9500"
+      mode:
+        light: "#ff9500"
+        dark: "#ff9f0a"
+        light_ax: "#c93400"
+        dark_ax: "#ffb340"
+    systemPurple:
+      type: color
+      name: Purple
+      value: "#af52de"
+      mode:
+        light: "#af52de"
+        dark: "#bf5af2"
+        light_ax: "#8944ab"
+        dark_ax: "#da8fff"
+    systemPink:
+      type: color
+      name: Pink
+      value: "#ff2d55"
+      mode:
+        light: "#ff2d55"
+        dark: "#ff375f"
+        light_ax: "#d30f45"
+        dark_ax: "#ff6482"
+    systemRed:
+      type: color
+      name: Red
+      value: "#ff3b30"
+      mode:
+        light: "#ff3b30"
+        dark: "#ff453a"
+        light_ax: "#d70015"
+        dark_ax: "#ff6961"
+    systemTeal:
+      type: color
+      name: Teal
+      value: "#30b0c7"
+      mode:
+        light: "#30b0c7"
+        dark: "#40c8e0"
+        light_ax: "#008299"
+        dark_ax: "#5de6ff"
+    systemYellow:
+      type: color
+      name: Yellow
+      value: "#ffcc00"
+      mode:
+        light: "#ffcc00"
+        dark: "#ffd60a"
+        light_ax: "#b25000"
+        dark_ax: "#ffd426"
+  font:
+    family:
+      sf_pro:
+        type: font
+        name: SF Pro
+        value: SF Pro
+      sf_pro_rounded:
+        type: font
+        name: SF Pro Rounded
+        value: SF Pro Rounded
+      sf_compact:
+        type: font
+        name: SF Compact
+        value: SF Compact
+      sf_mono:
+        type: font
+        name: SF Mono
+        value: SF Mono
+      new_york:
+        type: font
+        name: New York
+        value: New York
+    style:
+      modes: ["xSmall", "Small", "Medium", "Large", "xLarge", "xxLarge", "xxxLarge"]
+      large_title:
+        leading:
+          type: dimension
+          value: 41px
+          mode: [38px, 39px, 40px, 41px, 43px, 46px, 48px]
+        size:
+          type: dimension
+          value: 34px
+          mode: [31px, 32px, 33px, 34px, 36px, 38px, 40px]
+        weight:
+          type: font-weight
+          value: 400
+      title_1:
+        leading:
+          type: dimension
+          value: 34px
+          mode: [31px, 32px, 33px, 34px, 37px, 39px, 41px]
+        size:
+          type: dimension
+          value: 28px
+          mode: [25px, 26px, 27px, 28px, 30px, 32px, 32px]
+        weight:
+          type: font-weight
+          mode: 400
+      title_2:
+        leading:
+          type: dimension
+          value: 28px
+          mode: [24px, 25px, 26px, 28px, 30px, 32px, 34px]
+        size:
+          type: dimension
+          value: 22px
+          mode: [19px, 20px, 21px, 22px, 24px, 26px, 28px]
+        weight:
+          type: font-weight
+          mode: 400
+      title_3:
+        leading:
+          type: dimension
+          value: 25px
+          mode: [22px, 23px, 24px, 25px, 28px, 30px, 32px]
+        size:
+          type: dimension
+          value: 20px
+          mode: [17px, 18px, 19px, 20px, 22px, 24px, 26px]
+        weight:
+          type: font-weight
+          value: 400
+      headline:
+        leading:
+          type: dimension
+          value: 22px
+          mode: [19px, 20px, 21px, 22px, 24px, 26px, 29px]
+        size:
+          type: dimension
+          value: 17px
+          mode: [14px, 15px, 16px, 17px, 19px, 21px, 23px]
+        weight:
+          type: font-weight
+          value: 600
+      body:
+        leading:
+          type: dimension
+          value: 22px
+          mode: [19px, 20px, 21px, 22px, 24px, 26px, 29px]
+        size:
+          type: dimension
+          value: 17px
+          mode: [14px, 15px, 16px, 17px, 19px, 21px, 23px]
+        weight:
+          type: font-weight
+          mode: 400
+      callout:
+        leading:
+          type: dimension
+          value: 21px
+          mode: [18px, 19px, 20px, 21px, 23px, 25px, 28px]
+        size:
+          type: dimension
+          value: 16px
+          mode: [13px, 14px, 15px, 16px, 18px, 20px, 22px]
+        weight:
+          type: font-weight
+          value: 400
+      subhead:
+        leading:
+          type: dimension
+          value: 20px
+          mode: [16px, 18px, 19px, 20px, 22px, 24px, 28px]
+        size:
+          type: dimension
+          value: 15px
+          mode: [12px, 13px, 14px, 15px, 17px, 19px, 21px]
+        weight:
+          type: font-weight
+          value: 400
+      footnote:
+        leading:
+          type: dimension
+          value: 18px
+          mode: [16px, 16px, 16px, 18px, 20px, 22px, 24px]
+        size:
+          type: dimension
+          value: 13px
+          mode: [12px, 12px, 12px, 13px, 15px, 17px, 19px]
+        weight:
+          type: font-weight
+          value: 400
+      caption_1:
+        leading:
+          type: dimension
+          value: 16px
+          mode: [13px, 13px, 13px, 16px, 19px, 21px, 18px]
+        size:
+          type: dimension
+          value: 12px
+          mode: [11px, 11px, 11px, 12px, 14px, 16px, 23px]
+        weight:
+          type: font-weight
+          value: 400
+      caption_2:
+        leading:
+          type: dimension
+          value: 13px
+          mode: [13px, 13px, 13px, 13px, 18px, 20px, 22px]
+        size:
+          type: dimension
+          value: 11px
+          mode: [11px, 11px, 11px, 11px, 13px, 15px, 17px]
+        weight:
+          type: font-weight
+          value: 400
