--- a/packages/cli/tokens-example.yaml
+++ b/packages/cli/tokens-example.yaml
@@ -2,36 +2,30 @@ name: My Tokens
 description: Automatically generated with `cobalt init`
 tokens:
   color:
-    name: Colors
-    type: group
     modes:
       - standard
       - colorblind
-    tokens:
-      blue:
-        type: token
+    blue:
+      type: color
+      value: '#54aeff'
+      mode:
+        standard: '#54aeff'
+        colorblind: '#54aeff'
+    green:
+      type: color
+      value: '#4ac26b'
+      mode:
+        standard: '#4ac26b'
+        colorblind: '#35adff'
+    red:
+      type: color
+      value: '#fa4549'
+      mode:
+        standard: '#fa4549'
+        colorblind: '#d08002'
+  font:
+    family:
+      ibm_plex:
+        type: font
         value:
-          default: '#54aeff'
-          standard: '#54aeff'
-          colorblind: '#54aeff'
-      green:
-        type: token
-        value:
-          default: '#4ac26b'
-          standard: '#4ac26b'
-          colorblind: '#35adff'
-      red:
-        type: token
-        value:
-          default: '#fa4549'
-          standard: '#fa4549'
-          colorblind: '#d08002'
-  type:
-    name: Typography
-    type: group
-    tokens:
-      family:
-        ibm_plex:
-          type: token
-          value:
-            default: IBM Plex Sans
+          default: IBM Plex Sans
