--- a/package.json
+++ b/package.json
@@ -14,32 +14,29 @@
   "homepage": "https://cobalt-ui.pages.dev",
   "scripts": {
     "prebuild": "del-cli \"**/dist\"",
-    "build": "tsc -b packages/utils packages/core packages/cli packages/plugin-css packages/plugin-json packages/plugin-sass packages/plugin-ts",
+    "build": "run-p build:*",
+    "build:core": "cd packages/core && npm run build",
+    "build:ts": "tsc -b packages/utils packages/plugin-css packages/plugin-json packages/plugin-sass packages/plugin-ts",
     "cf:build": "cd www && npm install && npm run build",
     "changeset": "changeset",
     "dev": "run-p dev:*",
     "dev:utils": "cd packages/utils && npm run dev",
-    "dev:core": "cd packages/core && npm run dev",
-    "dev:cli": "cd packages/cli && npm run dev",
     "dev:plugin-css": "cd packages/plugin-css && npm run dev",
     "dev:plugin-json": "cd packages/plugin-json && npm run dev",
     "dev:plugin-sass": "cd packages/plugin-sass && npm run dev",
     "dev:plugin-ts": "cd packages/plugin-ts && npm run dev",
-    "lint": "eslint \"packages/**/*.{js,ts}\"",
+    "lint": "eslint \"packages/**/*.{ts,js,cjs,mjs}\"",
     "test": "run-p test:*",
     "test:core": "cd packages/core && npm run test",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.18.1",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@changesets/cli": "^2.19.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "del-cli": "^4.0.1",
-    "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "^8.5.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   }
 }
