--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -15,9 +15,11 @@ console_error_panic_hook = { version = "0", optional = true }
 json = "*"
 lazy_static = "*"
 regex = "*"
+serde = { version = "*", features = ["derive"] }
+serde_json = "*"
 wasm-bindgen = "0"
 wee_alloc = { version = "0", optional = true }
-yaml-rust = "*"
+yaml-rust = "*" # note: serde_yaml only wraps this, and we don’t need the wrapper
 
 [dev-dependencies]
 wasm-bindgen-test = "0"
