--- a/packages/core/test/fixtures/basic.yaml
+++ b/packages/core/test/fixtures/basic.yaml
@@ -23,6 +23,18 @@ tokens:
     remote:
       type: url
       value: https://my-cdn.com/github.svg
+  shadow:
+    near:
+      type: shadow
+      value:
+        - "0 2px #00000040"
+    far:
+      type: shadow
+      value:
+        - "0 1px 1px #0000000c"
+        - "0 2px 2px #0000000c"
+        - "0 4px 4px #0000000c"
+        - "0 8px 8px #0000000c"
   gradient:
     linear:
       type: linear-gradient
