--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -17,15 +17,12 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "tsc",
     "dev": "tsc -w"
-  },
-  "dependencies": {
-    "@cobalt-ui/utils": "^0.0.0",
-    "kleur": "^4.1.4"
   },
   "devDependencies": {
     "@cobalt-ui/core": "^0.0.2",
+    "@cobalt-ui/utils": "^0.0.0",
     "mime": "^3.0.0"
   }
 }
