--- a/packages/plugin-ts/package.json
+++ b/packages/plugin-ts/package.json
@@ -17,7 +17,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "tsc",
     "dev": "tsc -w"
   },
   "dependencies": {
