--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "lint": "eslint \"packages/**/*.{ts,js,cjs,mjs}\"",
     "test": "run-p test:*",
     "test:core": "cd packages/core && npm run test",
+    "test:plugin-css": "cd packages/plugin-css && npm run test",
+    "test:plugin-sass": "cd packages/plugin-sass && npm run test",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
@@ -37,7 +39,7 @@
     "@typescript-eslint/parser": "^5.9.1",
     "del-cli": "^4.0.1",
     "esbuild": "^0.14.11",
-    "eslint": "^8.6.0",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "npm-run-all": "^4.1.5",
