--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cobalt-ui/plugin-sass",
   "description": "Sass builder for Cobalt UI design tokens",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
@@ -23,12 +23,14 @@
   },
   "dependencies": {
     "@cobalt-ui/utils": "^0.2.0",
-    "mime": "^3.0.0"
+    "mime": "^3.0.0",
+    "svgo": "^2.8.0"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.2.0",
+    "@cobalt-ui/cli": "^0.2.1",
     "@cobalt-ui/core": "^0.2.0",
     "@types/mime": "^2.0.3",
+    "@types/svgo": "^2.6.1",
     "chai": "^4.3.4",
     "mocha": "^9.1.3"
   }
