--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,7 +19,8 @@
     "cobalt": "./bin/cli.js"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc -w"
   },
   "dependencies": {
     "@cobalt-ui/core": "^0.2.0",
@@ -28,12 +29,13 @@
     "chokidar": "^3.5.2",
     "dotenv": "^10.0.0",
     "number-precision": "^1.5.1",
+    "piscina": "^3.2.0",
+    "svgo": "^2.8.0",
     "undici": "^4.12.1"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "figma-api": "^1.9.1",
-    "figma-js": "^1.14.0",
     "mocha": "^9.1.3"
   }
 }
