--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cobalt-ui/plugin-sass",
-  "description": "Sass builder for Cobalt UI design tokens",
+  "description": "Generate scss/sass from your design tokens schema (requires @cobalt-ui/cli)",
   "version": "0.4.3",
   "author": {
     "name": "Drew Powers",
