@cobalt-ui/core@0.4.0

--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "prebuild": "del-cli \"**/dist\"",
     "build": "npm run build:core && npm run build:packages",
     "build:core": "cd packages/core && npm run build",
+    "build:examples": "run-p build:examples:*",
+    "build:examples:adobe": "cd examples/adobe && npm run build:tokens",
+    "build:examples:apple": "cd examples/apple && npm run build:tokens",
+    "build:examples:github": "cd examples/github && npm run build:tokens",
+    "build:examples:ibm": "cd examples/ibm && npm run build:tokens",
+    "build:examples:salesforce": "cd examples/salesforce && npm run build:tokens",
+    "build:examples:shopify": "cd examples/shopify && npm run build:tokens",
     "build:packages": "tsc -b packages/utils packages/cli packages/plugin-css packages/plugin-json packages/plugin-sass packages/plugin-ts",
     "cf:build": "cd www && npm install && npm run build",
     "changeset": "changeset",
