--- a/examples/adobe/package.json
+++ b/examples/adobe/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "co build",
-    "validate": "co validate"
+    "build:tokens": "co build",
+    "check": "co check"
   },
   "dependencies": {
-    "@cobalt-ui/cli": "^0.3.7",
-    "@cobalt-ui/plugin-css": "^0.4.3",
-    "@cobalt-ui/plugin-sass": "^0.4.6"
+    "@cobalt-ui/cli": "^0.3.8",
+    "@cobalt-ui/plugin-css": "^0.5.1",
+    "@cobalt-ui/plugin-json": "^0.3.4",
+    "@cobalt-ui/plugin-sass": "^0.4.7",
+    "@cobalt-ui/plugin-ts": "^0.3.4"
   }
 }
