--- a/examples/ibm/package.json
+++ b/examples/ibm/package.json
@@ -11,8 +11,10 @@
     "@carbon/colors": "^10.34.0",
     "@carbon/icons": "^10.44.0",
     "@carbon/type": "^10.39.0",
-    "@cobalt-ui/cli": "^0.3.7",
-    "@cobalt-ui/plugin-css": "^0.4.3",
-    "@cobalt-ui/plugin-sass": "^0.4.6"
+    "@cobalt-ui/cli": "^0.3.8",
+    "@cobalt-ui/plugin-css": "^0.5.1",
+    "@cobalt-ui/plugin-json": "^0.3.4",
+    "@cobalt-ui/plugin-sass": "^0.4.7",
+    "@cobalt-ui/plugin-ts": "^0.3.4"
   }
 }
