--- a/examples/salesforce/package.json
+++ b/examples/salesforce/package.json
@@ -8,9 +8,11 @@
     "update": "node scripts/update"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.3.7",
-    "@cobalt-ui/plugin-css": "^0.4.3",
-    "@cobalt-ui/plugin-sass": "^0.4.6",
+    "@cobalt-ui/cli": "^0.3.8",
+    "@cobalt-ui/plugin-css": "^0.5.1",
+    "@cobalt-ui/plugin-json": "^0.3.4",
+    "@cobalt-ui/plugin-sass": "^0.4.7",
+    "@cobalt-ui/plugin-ts": "^0.3.4",
     "@salesforce-ux/design-system": "^2.16.2",
     "better-color-tools": "^0.3.0"
   }
