--- a/examples/shopify/package.json
+++ b/examples/shopify/package.json
@@ -7,8 +7,10 @@
     "build:tokens": "co build"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.3.7",
-    "@cobalt-ui/plugin-css": "^0.4.3",
-    "@cobalt-ui/plugin-sass": "^0.4.6"
+    "@cobalt-ui/cli": "^0.3.8",
+    "@cobalt-ui/plugin-css": "^0.5.1",
+    "@cobalt-ui/plugin-json": "^0.3.4",
+    "@cobalt-ui/plugin-sass": "^0.4.7",
+    "@cobalt-ui/plugin-ts": "^0.3.4"
   }
 }
