Fix `cobalt check` requiring config to run

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "test": "mocha --parallel"
   },
   "dependencies": {
     "@cobalt-ui/core": "^0.4.0",
