--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dev:plugin-ts": "cd packages/plugin-ts && npm run dev",
     "lint": "eslint \"packages/**/*.{ts,js,cjs,mjs}\"",
     "test": "run-p test:*",
+    "test:cli": "cd packages/cli && npm run test",
     "test:core": "cd packages/core && npm run test",
     "test:plugin-css": "cd packages/plugin-css && npm run test",
     "test:plugin-sass": "cd packages/plugin-sass && npm run test",
@@ -43,11 +44,11 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.20.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "del-cli": "^4.0.1",
-    "esbuild": "^0.14.14",
-    "eslint": "^8.7.0",
+    "esbuild": "^0.14.20",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "npm-run-all": "^4.1.5",
