--- a/www/package.json
+++ b/www/package.json
@@ -26,6 +26,7 @@
     "@cobalt-ui/plugin-ts": "^0.3.4",
     "astro": "^0.23.0",
     "morphdom": "^2.6.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.49.9"
   }
 }
