--- a/www/package.json
+++ b/www/package.json
@@ -4,17 +4,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "astro:build": "astro build",
-    "astro:dev": "astro dev",
-    "build": "run-s *:build",
+    "build": "run-s build:*",
+    "build:static": "astro build",
     "build:tokens": "co build",
-    "predev": "npm run build:tokens",
     "sync": "co sync",
-    "dev": "run-p *:dev",
+    "dev": "run-p dev:*",
+    "dev:serve": "astro dev",
     "dev:tokens": "co build -w"
   },
   "dependencies": {
-    "@astrojs/renderer-vue": "^0.3.0",
+    "@astrojs/renderer-vue": "^0.4.0",
     "prismjs": "^1.27.0",
     "vue": "^3.2.31"
   },
@@ -24,8 +23,7 @@
     "@cobalt-ui/plugin-json": "^0.3.4",
     "@cobalt-ui/plugin-sass": "^0.4.9",
     "@cobalt-ui/plugin-ts": "^0.3.4",
-    "astro": "^0.23.0",
-    "morphdom": "^2.6.1",
+    "astro": "^0.23.2",
     "npm-run-all": "^4.1.5",
     "sass": "^1.49.9"
   }
