add strokeStyle and border types

--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "build:examples:salesforce": "cd examples/salesforce && npm run build:tokens",
     "build:examples:shopify": "cd examples/shopify && npm run build:tokens",
     "build:packages": "tsc -b packages/utils packages/cli packages/plugin-css packages/plugin-json packages/plugin-sass packages/plugin-ts",
-    "cf:build": "cd www && npm install && npm run build",
+    "cf:build": "npm -s cf:*",
+    "cf:build:core": "cd packages/core && npm i && npm run build",
+    "cf:build:cli": "cd packages/cli && npm i && npm run build",
+    "cf:build:plugin-sass": "cd packages/plugin-sass && npm i && npm run build",
+    "cf:build:www": "cd www && npm i && npm run build",
     "changeset": "changeset",
     "dev": "run-p dev:*",
     "dev:core": "cd packages/core && npm run dev",
