--- a/www/package.json
+++ b/www/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "scripts": {
     "build": "run-s build:*",
-    "build:static": "astro build",
     "build:tokens": "co build",
+    "build:static": "astro build",
     "sync": "co sync",
     "dev": "run-p dev:*",
-    "dev:serve": "astro dev",
-    "dev:tokens": "co build -w"
+    "dev:tokens": "co build -w",
+    "dev:serve": "astro dev"
   },
   "dependencies": {
     "@astrojs/renderer-vue": "^0.4.0",
@@ -18,11 +18,9 @@
     "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.4.0",
-    "@cobalt-ui/core": "^0.5.0",
-    "@cobalt-ui/plugin-json": "^0.3.4",
-    "@cobalt-ui/plugin-sass": "^0.4.9",
-    "@cobalt-ui/plugin-ts": "^0.3.4",
+    "@cobalt-ui/cli": "file:../packages/cli/",
+    "@cobalt-ui/core": "file:../packages/core/",
+    "@cobalt-ui/plugin-sass": "file:../packages/plugin-sass/",
     "astro": "^0.23.2",
     "npm-run-all": "^4.1.5",
     "sass": "^1.49.9"
