--- a/www/src/docs-manifest.json
+++ b/www/src/docs-manifest.json
@@ -1,68 +1,34 @@
 {
   "pages": [
-    {
-      "title": "Introduction",
-      "pathname": "/"
-    },
-    {
-      "title": "Getting Started",
-      "pathname": "/docs/getting-started"
-    },
-    {
-      "title": "Figma",
-      "pathname": "/docs/getting-started/figma"
-    },
-    {
-      "title": "Generation",
-      "pathname": "/docs/getting-started/generation"
-    },
-    {
-      "title": "Concepts",
-      "pathname": "/docs/concepts"
-    },
-    {
-      "title": "Tokens",
-      "pathname": "/docs/concepts/tokens"
-    },
-    {
-      "title": "Modes",
-      "pathname": "/docs/concepts/modes"
-    },
-    {
-      "title": "Goals",
-      "pathname": "/docs/concepts/project-goals"
-    },
-    {
-      "title": "Plugins",
-      "pathname": "/docs/plugins"
-    },
-    {
-      "title": "CSS",
-      "pathname": "/docs/plugins/css"
-    },
-    {
-      "title": "JSON",
-      "pathname": "/docs/plugins/json"
-    },
-    {
-      "title": "Sass",
-      "pathname": "/docs/plugins/sass"
-    },
-    {
-      "title": "TypeScript",
-      "pathname": "/docs/plugins/ts"
-    },
-    {
-      "title": "Reference",
-      "pathname": "/docs/reference"
-    },
-    {
-      "title": "tokens.json",
-      "pathname": "/docs/reference/schema"
-    },
-    {
-      "title": "Config",
-      "pathname": "/docs/reference/config"
-    }
+    { "title": "Getting Started", "pathname": "/docs/getting-started" },
+    { "title": "Tokens",          "pathname": "/docs/tokens" },
+    { "title": "Color",           "pathname": "/docs/tokens/#color" },
+    { "title": "Dimension",       "pathname": "/docs/tokens/#dimension" },
+    { "title": "Font",            "pathname": "/docs/tokens/#font" },
+    { "title": "Duration",        "pathname": "/docs/tokens/#duration" },
+    { "title": "Cubic Bézier",    "pathname": "/docs/tokens/#cubic-bezier" },
+    { "title": "Link",            "pathname": "/docs/tokens/#link" },
+    { "title": "Stroke style",    "pathname": "/docs/tokens/#stroke-style" },
+    { "title": "Border",          "pathname": "/docs/tokens/#border" },
+    { "title": "Transition",      "pathname": "/docs/tokens/#transition" },
+    { "title": "Shadow",          "pathname": "/docs/tokens/#shadow" },
+    { "title": "Gradient",        "pathname": "/docs/tokens/#gradient" },
+    { "title": "Typography",      "pathname": "/docs/tokens/#typography" },
+    { "title": "Groups",          "pathname": "/docs/tokens/#groups" },
+    { "title": "Custom",          "pathname": "/docs/tokens/#custom" },
+    { "title": "Aliasing",        "pathname": "/docs/tokens/#aliasing" },
+    { "title": "Modes",           "pathname": "/docs/tokens/#modes" },
+    { "title": "Guides",          "pathname": "/docs/guides" },
+    { "title": "Best Practices",  "pathname": "/docs/guides/best-practices" },
+    { "title": "Modes",           "pathname": "/docs/guides/modes" },
+    { "title": "Figma",           "pathname": "/docs/guides/figma" },
+    { "title": "Goals",           "pathname": "/docs/guides/project-goals" },
+    { "title": "Plugins",         "pathname": "/docs/plugins" },
+    { "title": "CSS",             "pathname": "/docs/plugins/css" },
+    { "title": "JSON",            "pathname": "/docs/plugins/json" },
+    { "title": "Sass",            "pathname": "/docs/plugins/sass" },
+    { "title": "TypeScript",      "pathname": "/docs/plugins/ts" },
+    { "title": "Reference",       "pathname": "/docs/reference" },
+    { "title": "Config",          "pathname": "/docs/reference/config" }
   ]
 }
