--- a/package.json
+++ b/package.json
@@ -43,17 +43,20 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.21.0",
+    "@changesets/cli": "^2.22.0",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "del-cli": "^4.0.1",
-    "esbuild": "^0.14.23",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.4.0",
+    "esbuild": "^0.14.31",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "pnpm": "^6.32.2",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "pnpm": "^6.32.4",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.3"
+  },
+  "volta": {
+    "node": "16.14.2"
   }
 }
