--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
           restore-keys: ${{ runner.os }}-
       - uses: pnpm/action-setup@v2
         with:
-          version: 6
+          version: latest
       - uses: actions/setup-node@v2
       - run: pnpm i
       - run: pnpm run lint
@@ -33,7 +33,7 @@ jobs:
           restore-keys: ${{ runner.os }}-
       - uses: pnpm/action-setup@v2
         with:
-          version: 6
+          version: latest
       - uses: actions/setup-node@v2
       - run: pnpm i
       - run: pnpm run build
