--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,12 +26,12 @@
     "test": "mocha --parallel"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "^0.4.0",
+    "@cobalt-ui/utils": "workspace:^0.4.0",
     "better-color-tools": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
-    "@types/svgo": "^2.6.3",
+    "@types/svgo": "^2.6.4",
     "chai": "^4.3.6",
     "mocha": "^10.0.0"
   }
