--- a/docs/package.json
+++ b/docs/package.json
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@cobalt-ui/cli": "^0.5.2",
     "@cobalt-ui/core": "^0.6.3",
+    "@cobalt-ui/plugin-css": "^0.8.0",
     "@cobalt-ui/plugin-sass": "^0.7.0",
     "astro": "^1.1.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.54.5",
+    "shiki": "^0.11.1",
     "vite": "^3.0.9"
   }
 }
