--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,8 +29,8 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@cobalt-ui/core": "workspace:^0.6.2",
-    "@cobalt-ui/utils": "workspace:^0.5.0",
+    "@cobalt-ui/core": "^0.6.3",
+    "@cobalt-ui/utils": "^0.5.0",
     "better-color-tools": "^0.6.3",
     "chokidar": "^3.5.3",
     "dotenv": "^10.0.0",
@@ -42,6 +42,6 @@
   "devDependencies": {
     "@types/svgo": "^2.6.4",
     "figma-api": "^1.10.1",
-    "vitest": "^0.24.0"
+    "vitest": "^0.24.3"
   }
 }
