--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:examples:ibm": "cd examples/ibm && npm run build:tokens",
     "build:examples:salesforce": "cd examples/salesforce && npm run build:tokens",
     "build:examples:shopify": "cd examples/shopify && npm run build:tokens",
-    "build:packages": "tsc -b packages/cli packages/plugin-css packages/plugin-json packages/plugin-sass packages/plugin-ts",
+    "build:packages": "tsc -b packages/cli packages/plugin-css packages/plugin-js packages/plugin-sass",
     "build:utils": "tsc -b packages/utils",
     "cf:build": "pnpm i --no-frozen-lockfile && npm run build && cd docs && npm run build",
     "changeset": "changeset",
@@ -27,16 +27,15 @@
     "dev:cli": "cd packages/cli && npm run dev",
     "dev:utils": "cd packages/utils && npm run dev",
     "dev:plugin-css": "cd packages/plugin-css && npm run dev",
-    "dev:plugin-json": "cd packages/plugin-json && npm run dev",
+    "dev:plugin-js": "cd packages/plugin-js && npm run dev",
     "dev:plugin-sass": "cd packages/plugin-sass && npm run dev",
-    "dev:plugin-ts": "cd packages/plugin-ts && npm run dev",
     "lint": "eslint \"packages/**/*.{ts,js,cjs,mjs}\"",
     "test": "run-p test:*",
     "test:cli": "cd packages/cli && npm run test",
     "test:core": "cd packages/core && npm run test",
     "test:plugin-css": "cd packages/plugin-css && npm run test",
+    "test:plugin-js": "cd packages/plugin-js && npm run test",
     "test:plugin-sass": "cd packages/plugin-sass && npm run test",
-    "test:plugin-ts": "cd packages/plugin-sass && npm run test",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
