--- a/examples/adobe/package.json
+++ b/examples/adobe/package.json
@@ -7,11 +7,10 @@
     "build:tokens": "co build",
     "check": "co check"
   },
-  "dependencies": {
-    "@cobalt-ui/cli": "^0.5.2",
-    "@cobalt-ui/plugin-css": "^0.8.0",
-    "@cobalt-ui/plugin-json": "^0.5.0",
-    "@cobalt-ui/plugin-sass": "^0.7.0",
-    "@cobalt-ui/plugin-ts": "^0.5.0"
+  "devDependencies": {
+    "@cobalt-ui/cli": "^0.6.0",
+    "@cobalt-ui/plugin-css": "^0.8.1",
+    "@cobalt-ui/plugin-js": "^0.0.1",
+    "@cobalt-ui/plugin-sass": "^0.7.1"
   }
 }
