--- a/examples/apple/package.json
+++ b/examples/apple/package.json
@@ -8,10 +8,9 @@
     "check": "co check"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.5.2",
-    "@cobalt-ui/plugin-css": "^0.8.0",
-    "@cobalt-ui/plugin-json": "^0.5.0",
-    "@cobalt-ui/plugin-sass": "^0.7.0",
-    "@cobalt-ui/plugin-ts": "^0.5.0"
+    "@cobalt-ui/cli": "^0.6.0",
+    "@cobalt-ui/plugin-css": "^0.8.1",
+    "@cobalt-ui/plugin-js": "^0.0.1",
+    "@cobalt-ui/plugin-sass": "^0.7.1"
   }
 }
