--- a/examples/github/package.json
+++ b/examples/github/package.json
@@ -8,12 +8,11 @@
     "update": "node scripts/update"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.5.2",
-    "@cobalt-ui/plugin-css": "^0.8.0",
-    "@cobalt-ui/plugin-json": "^0.5.0",
-    "@cobalt-ui/plugin-sass": "^0.7.0",
-    "@cobalt-ui/plugin-ts": "^0.5.0",
-    "@primer/octicons": "^16.2.0",
-    "@primer/primitives": "^7.4.0"
+    "@cobalt-ui/cli": "^0.6.0",
+    "@cobalt-ui/plugin-css": "^0.8.1",
+    "@cobalt-ui/plugin-js": "^0.0.1",
+    "@cobalt-ui/plugin-sass": "^0.7.1",
+    "@primer/octicons": "^16.3.1",
+    "@primer/primitives": "^7.9.0"
   }
 }
