--- a/examples/ibm/package.json
+++ b/examples/ibm/package.json
@@ -8,13 +8,12 @@
     "update": "node scripts/update"
   },
   "devDependencies": {
-    "@carbon/colors": "^10.34.0",
-    "@carbon/icons": "^10.44.0",
-    "@carbon/type": "^10.39.0",
-    "@cobalt-ui/cli": "^0.5.2",
-    "@cobalt-ui/plugin-css": "^0.8.0",
-    "@cobalt-ui/plugin-json": "^0.5.0",
-    "@cobalt-ui/plugin-sass": "^0.7.0",
-    "@cobalt-ui/plugin-ts": "^0.5.0"
+    "@carbon/colors": "^11.6.0",
+    "@carbon/icons": "^11.10.0",
+    "@carbon/type": "^11.10.0",
+    "@cobalt-ui/cli": "^0.6.0",
+    "@cobalt-ui/plugin-css": "^0.8.1",
+    "@cobalt-ui/plugin-js": "^0.0.1",
+    "@cobalt-ui/plugin-sass": "^0.7.1"
   }
 }
