--- a/examples/salesforce/package.json
+++ b/examples/salesforce/package.json
@@ -8,13 +8,12 @@
     "update": "node scripts/update"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.5.2",
-    "@cobalt-ui/plugin-css": "^0.8.0",
-    "@cobalt-ui/plugin-json": "^0.5.0",
-    "@cobalt-ui/plugin-sass": "^0.7.0",
-    "@cobalt-ui/plugin-ts": "^0.5.0",
+    "@cobalt-ui/cli": "^0.6.0",
+    "@cobalt-ui/plugin-css": "^0.8.1",
+    "@cobalt-ui/plugin-js": "^0.0.1",
+    "@cobalt-ui/plugin-sass": "^0.7.1",
     "@salesforce-ux/design-system": "^2.16.2",
-    "better-color-tools": "^0.6.1",
+    "better-color-tools": "^0.9.1",
     "postcss": "^8.4.16"
   }
 }
