--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "homepage": "https://cobalt-ui.pages.dev",
   "scripts": {
     "prebuild": "del-cli \"**/dist\"",
-    "build": "run-s build:utils build:core build:packages",
+    "build": "run-s -s build:utils build:core build:packages",
     "build:core": "cd packages/core && npm run build",
-    "build:examples": "run-p build:examples:*",
+    "build:examples": "run-p -s build:examples:*",
     "build:examples:adobe": "cd examples/adobe && npm run build:tokens",
     "build:examples:apple": "cd examples/apple && npm run build:tokens",
     "build:examples:github": "cd examples/github && npm run build:tokens",
@@ -22,7 +22,7 @@
     "build:utils": "tsc -b packages/utils",
     "cf:build": "pnpm i --no-frozen-lockfile && npm run build && cd docs && npm run build",
     "changeset": "changeset",
-    "dev": "run-p dev:*",
+    "dev": "run-p -s dev:*",
     "dev:core": "cd packages/core && npm run dev",
     "dev:cli": "cd packages/cli && npm run dev",
     "dev:utils": "cd packages/utils && npm run dev",
@@ -30,7 +30,7 @@
     "dev:plugin-js": "cd packages/plugin-js && npm run dev",
     "dev:plugin-sass": "cd packages/plugin-sass && npm run dev",
     "lint": "eslint \"packages/**/*.{ts,js,cjs,mjs}\"",
-    "test": "run-p test:*",
+    "test": "run-p -s test:*",
     "test:cli": "cd packages/cli && npm run test",
     "test:core": "cd packages/core && npm run test",
     "test:plugin-css": "cd packages/plugin-css && npm run test",
