feat: support the latest version of the spec
This adds support for
- Font name
- Font weight
- Number

--- a/docs/src/docs-manifest.json
+++ b/docs/src/docs-manifest.json
@@ -4,9 +4,11 @@
     {"title": "Tokens",          "pathname": "/docs/tokens"},
     {"title": "Color",           "pathname": "/docs/tokens/#color"},
     {"title": "Dimension",       "pathname": "/docs/tokens/#dimension"},
-    {"title": "Font",            "pathname": "/docs/tokens/#font"},
+    {"title": "Font Family",     "pathname": "/docs/tokens/#font"},
+    {"title": "Font Weight",     "pathname": "/docs/tokens/#font-weight"},
     {"title": "Duration",        "pathname": "/docs/tokens/#duration"},
     {"title": "Cubic Bézier",    "pathname": "/docs/tokens/#cubic-bezier"},
+    {"title": "Number",          "pathname": "/docs/tokens/#number"},
     {"title": "Link",            "pathname": "/docs/tokens/#link"},
     {"title": "Stroke style",    "pathname": "/docs/tokens/#stroke-style"},
     {"title": "Border",          "pathname": "/docs/tokens/#border"},
