fix: fix ignore glob for changeset

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,5 +6,5 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@example/**", "cobalt-docs"]
+  "ignore": ["@example/**", "docs"]
 }
