--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,11 +26,13 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
-    "test": "vitest run"
+    "test": "run-p test:js test:ts",
+    "test:js": "vitest run",
+    "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@cobalt-ui/core": "^0.7.4",
-    "@cobalt-ui/utils": "^0.5.3",
+    "@cobalt-ui/core": "*",
+    "@cobalt-ui/utils": "*",
     "@types/csso": "^5.0.0",
     "better-color-tools": "^0.10.2",
     "chokidar": "^3.5.3",
@@ -38,11 +40,13 @@
     "number-precision": "^1.6.0",
     "piscina": "^3.2.0",
     "svgo": "^3.0.2",
-    "undici": "^5.21.0",
+    "undici": "^5.21.2",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "figma-api": "^1.11.0",
-    "vitest": "^0.29.7"
+    "npm-run-all": "^4.1.5",
+    "vitest": "^0.30.1"
   }
 }
