--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,23 +16,26 @@
   "type": "module",
   "main": "./dist/index.min.js",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc && npm run bundle",
+    "bundle": "esbuild --format=esm --bundle --minify dist/index.js --outfile=dist/index.min.js --sourcemap && cp dist/index.d.ts dist/index.min.d.ts",
     "dev": "run-p -s dev:*",
     "dev:ts": "tsc --watch",
     "dev:bundle": "npm run bundle -- --watch",
-    "bundle": "esbuild --format=esm --bundle --minify dist/index.js --outfile=dist/index.min.js --sourcemap",
-    "test": "vitest run"
+    "test": "run-p -s test:*",
+    "test:js": "vitest run",
+    "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "^0.5.3",
+    "@cobalt-ui/utils": "*",
     "@types/csso": "^5.0.0",
     "better-color-tools": "^0.10.2",
     "svgo": "^3.0.2"
   },
   "devDependencies": {
-    "@types/node": "^18.15.10",
-    "vitest": "^0.29.7"
+    "@types/node": "^18.15.11",
+    "esbuild": "^0.17.16",
+    "npm-run-all": "^4.1.5",
+    "vitest": "^0.30.1"
   }
 }
