--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -15,26 +15,29 @@
   "license": "MIT",
   "type": "module",
   "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
-    "test": "vitest run"
+    "test": "run-p -s test:*",
+    "test:js": "vitest run",
+    "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
     "@cobalt-ui/cli": "*"
   },
   "dependencies": {
-    "@cobalt-ui/plugin-css": "^1.1.6",
-    "@cobalt-ui/utils": "^0.5.3",
+    "@cobalt-ui/plugin-css": "*",
+    "@cobalt-ui/utils": "*",
     "@types/csso": "^5.0.0",
     "mime": "^3.0.0",
     "svgo": "^3.0.2"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^0.7.4",
-    "@cobalt-ui/core": "^0.7.4",
+    "@cobalt-ui/cli": "*",
+    "@cobalt-ui/core": "*",
     "@types/mime": "^2.0.3",
-    "vitest": "^0.29.7"
+    "@types/node": "^18.15.11",
+    "npm-run-all": "^4.1.5",
+    "vitest": "^0.30.1"
   }
 }
