--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,8 +31,8 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@cobalt-ui/core": "*",
-    "@cobalt-ui/utils": "*",
+    "@cobalt-ui/core": "^0.7.4",
+    "@cobalt-ui/utils": "^0.5.3",
     "@types/csso": "^5.0.0",
     "better-color-tools": "^0.10.2",
     "chokidar": "^3.5.3",
