--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,14 +27,14 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "*",
+    "@cobalt-ui/utils": "^0.5.3",
     "@types/csso": "^5.0.0",
     "better-color-tools": "^0.10.2",
     "svgo": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "esbuild": "^0.17.16",
+    "esbuild": "^0.17.17",
     "npm-run-all": "^4.1.5",
     "vitest": "^0.30.1"
   }
