--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -27,11 +27,11 @@
     "@cobalt-ui/cli": "*"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "*"
+    "@cobalt-ui/utils": "^0.5.3"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "*",
-    "@cobalt-ui/core": "*",
+    "@cobalt-ui/cli": "^0.7.4",
+    "@cobalt-ui/core": "^0.7.4",
     "fast-glob": "^3.2.12",
     "npm-run-all": "^4.1.5",
     "vitest": "^0.30.1"
