--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -26,15 +26,15 @@
     "@cobalt-ui/cli": "*"
   },
   "dependencies": {
-    "@cobalt-ui/plugin-css": "*",
-    "@cobalt-ui/utils": "*",
+    "@cobalt-ui/plugin-css": "^1.1.6",
+    "@cobalt-ui/utils": "^0.5.3",
     "@types/csso": "^5.0.0",
     "mime": "^3.0.0",
     "svgo": "^3.0.2"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "*",
-    "@cobalt-ui/core": "*",
+    "@cobalt-ui/cli": "^0.7.4",
+    "@cobalt-ui/core": "^0.7.4",
     "@types/mime": "^2.0.3",
     "@types/node": "^18.15.11",
     "npm-run-all": "^4.1.5",
